# ezhic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
docs/: index.md
lib-src/: AcceptUpdates.cpp  AcceptUpdates.h  BRunner.cpp  BRunner.h  BRunner_IMP.h  Bundle.cpp  Bundle.h  Event.cpp  Event.h  EventWrapper.cpp  EventWrapper.h  Handles.h  Registry.cpp  Registry.h  StreamLogger.cpp  StreamLogger.h  Timer.cpp  Timer.h  Traits.h  Validator.h
lib-src/Circuitry/: Circuit.cpp  Circuit.h  CircuitPredicates.cpp  CircuitPredicates.h  Circuitry.h  IntentionTagger.cpp  IntentionTagger.h  Travellers.h
tests/: AcceptUpdates.t.cpp  BRunner.t.cpp  Bundle.t.cpp  CMakeLists.txt  Helpers.h  Registry.t.cpp  StreamLogger.t.cpp  Task.t.cpp  Validator.t.cpp  testServer.py
tests/Circuitry/: CircuitPredicates.t.cpp  Traversal.t.cpp
tests/end2end/: endtoend.cpp
tests/static/: changeFonts.sh  test.html
tests/static/js/: main.js
